.title의 내부 구성을 쉽게 알아볼 수 있게 스탠바이

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
           <!-- 의도적으로 section-header와 명확히 구분되는 새로운 컴포넌트로 나눔 -->
           <div class="title">
-            <div class="title-headings">Title</div>
-            <div class="title-description">Description</div>
+            <h1 class="title-headings">Title</h1>
+            <p class="title-description">Description</p>
             <div class="title-controls">Control</div>
           </div>
 
@@ -31,8 +31,8 @@
         <header class="section-header">
 
           <div class="title">
-            <div class="title-headings">Title</div>
-            <div class="title-description">Description</div>
+            <h1 class="title-headings">Title</ㅇ>
+            <p class="title-description">Description</p>
             <div class="title-controls">Control</div>
           </div>
           
