--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
           <!-- 의도적으로 section-header와 명확히 구분되는 새로운 컴포넌트로 나눔 -->
           <div class="title">
-            <h1 class="title-headings">Title</h1>
+            <h1 class="title-headings">
+              START YOUR
+              PORTFOLIO
+              PROJECT
+            </h1>
             <p class="title-description">Description</p>
             <div class="title-controls">Control</div>
           </div>
