--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
           <!-- 의도적으로 section-header와 명확히 구분되는 새로운 컴포넌트로 나눔 -->
           <div class="title">
             <h1 class="title-headings">
-              START YOUR
-              PORTFOLIO
+              START YOUR <br>
+              PORTFOLIO <br>
               PROJECT
             </h1>
             <p class="title-description">Description</p>
-            <div class="title-controls">Control</div>
           </div>
 
         </header>
@@ -35,7 +34,10 @@
         <header class="section-header">
 
           <div class="title">
-            <h1 class="title-headings">Title</ㅇ>
+            <h1 class="title-headings">
+              CALENDAR AND <br>
+              EVENT TOOLS
+            </h1>
             <p class="title-description">Description</p>
             <div class="title-controls">Control</div>
           </div>
