.panel의 전체 레이아웃 구성

--- a/index.html
+++ b/index.html
@@ -28,9 +28,22 @@
         <div class="section-contents">
           
           <ul class="l_gap_row">
-            <li class="panel">PANEL</li>
-            <li class="panel">PANEL</li>
-            <li class="panel">PANEL</li>
+
+            <li class="panel">
+              <div class="panel-cover">Cover</div>
+              <div class="panel-">Contents</div>
+            </li>
+
+            <li class="panel">
+              <div class="panel-cover">Cover</div>
+              <div class="panel-">Contents</div>
+            </li>
+            
+            <li class="panel">
+              <div class="panel-cover">Cover</div>
+              <div class="panel-">Contents</div>
+            </li>
+
           </ul>
 
         </div>
