--- a/index.html
+++ b/index.html
@@ -31,17 +31,38 @@
 
             <li class="panel">
               <div class="panel-cover">Cover</div>
-              <div class="panel-">Contents</div>
+              <div class="panel-contents">
+                <h2 class="panel-title">Take a rest</h2>
+                <ul class="list">
+                  <li>It has survived not only five centuries.</li>
+                  <li>Why do we use it?</li>
+                  <li>Contrary to popular belief, Lorem Ipsum is not simply random text. It has root.</li>
+                </ul>
+              </div>
             </li>
 
             <li class="panel">
               <div class="panel-cover">Cover</div>
-              <div class="panel-">Contents</div>
+              <div class="panel-contents">
+                <h2 class="panel-title">Build something</h2>
+                <ul class="list">
+                  <li>There are many variations of passages of Lorem Ipsum available.</li>
+                  <li>If you are going to use a passage of Lorem Ipsum.</li>
+                  <li>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</li>
+                </ul>
+              </div>
             </li>
             
             <li class="panel">
               <div class="panel-cover">Cover</div>
-              <div class="panel-">Contents</div>
+              <div class="panel-contents">
+                <h2 class="panel-title">Reference</h2>
+                <ul class="list">
+                  <li>Once is therefore always free form repetition, injected humor, or non-characterisic words etc.</li>
+                  <li>Predefined chunks as necessary, making this the first true generator on the internet.</li>
+                  <li>Finibus Bonorum et Malorum by Cicero are also reproduced in their exact original form.</li>
+                </ul>
+              </div>
             </li>
 
           </ul>
