.panel-cover의 내부 마크업 추가 + 클래스명 작명

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
           <ul class="l_gap_row">
 
             <li class="panel">
-              <div class="panel-cover">Cover</div>
+              <div class="panel-cover">
+                <img class="panel-cover-bg" src="images/cover01.png" />
+                <p class="panel-cover-description">Rest</p>
+              </div>
               <div class="panel-contents">
                 <h2 class="panel-title">Take a rest</h2>
                 <ul class="list type_square">
@@ -42,7 +45,10 @@
             </li>
 
             <li class="panel">
-              <div class="panel-cover">Cover</div>
+              <div class="panel-cover">
+                <img class="panel-cover-bg" src="images/cover02.png" />
+                <p class="panel-cover-description">Rest</p>
+              </div>
               <div class="panel-contents">
                 <h2 class="panel-title">Build something</h2>
                 <ul class="list">
@@ -54,7 +60,10 @@
             </li>
             
             <li class="panel">
-              <div class="panel-cover">Cover</div>
+              <div class="panel-cover">
+                <img class="panel-cover-bg" src="images/cover03.png" />
+                <p class="panel-cover-description">Rest</p>
+              </div>
               <div class="panel-contents">
                 <h2 class="panel-title">Reference</h2>
                 <ul class="list">
