panel-cover-bg의 너비, 높이를 무조건 부모 기준으로 잡힐 수 있게, (실제 공간은 차지하지 않음)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <li class="panel">
               <div class="panel-cover">
-                <img class="panel-cover-bg" src="images/cover01.png" />
+                <img class="panel-cover-bg" src="images/photo01 2.png" />
                 <p class="panel-cover-description">Rest</p>
               </div>
               <div class="panel-contents">
@@ -46,7 +46,7 @@
 
             <li class="panel">
               <div class="panel-cover">
-                <img class="panel-cover-bg" src="images/cover02.png" />
+                <img class="panel-cover-bg" src="images/photo02 2.png" />
                 <p class="panel-cover-description">Rest</p>
               </div>
               <div class="panel-contents">
@@ -61,7 +61,7 @@
             
             <li class="panel">
               <div class="panel-cover">
-                <img class="panel-cover-bg" src="images/cover03.png" />
+                <img class="panel-cover-bg" src="images/photo03 2.png" />
                 <p class="panel-cover-description">Rest</p>
               </div>
               <div class="panel-contents">
