스태킹 컨텍스트를 조율하여 z-index: -1을 원하는 방향으로 사용

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li class="panel">
               <div class="panel-cover">
                 <img class="panel-cover-bg" src="images/photo02 2.png" />
-                <p class="panel-cover-description">Rest</p>
+                <p class="panel-cover-description">Craft</p>
               </div>
               <div class="panel-contents">
                 <h2 class="panel-title">Build something</h2>
@@ -62,7 +62,7 @@
             <li class="panel">
               <div class="panel-cover">
                 <img class="panel-cover-bg" src="images/photo03 2.png" />
-                <p class="panel-cover-description">Rest</p>
+                <p class="panel-cover-description">Scrap</p>
               </div>
               <div class="panel-contents">
                 <h2 class="panel-title">Reference</h2>
