--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <li class="panel">
               <div class="panel-cover">
-                <img class="panel-cover-bg" src="images/photo01 2.png" />
+                <img class="panel-cover-bg" src="images/photo01.png" />
                 <p class="panel-cover-description">Rest</p>
               </div>
               <div class="panel-contents">
@@ -46,7 +46,7 @@
 
             <li class="panel">
               <div class="panel-cover">
-                <img class="panel-cover-bg" src="images/photo02 2.png" />
+                <img class="panel-cover-bg" src="images/photo02.png" />
                 <p class="panel-cover-description">Craft</p>
               </div>
               <div class="panel-contents">
@@ -61,7 +61,7 @@
             
             <li class="panel">
               <div class="panel-cover">
-                <img class="panel-cover-bg" src="images/photo03 2.png" />
+                <img class="panel-cover-bg" src="images/photo03.png" />
                 <p class="panel-cover-description">Scrap</p>
               </div>
               <div class="panel-contents">
