--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <header class="section-header">
 
           <!-- 의도적으로 section-header와 명확히 구분되는 새로운 컴포넌트로 나눔 -->
-          <div class="title">
+          <div class="title theme_purple">
             <h1 class="title-headings">
               START YOUR <br>
-              PORTFOLIO <br>
-              PROJECT
+              <strong>PORTFOLIO</strong> <br>
+              <strong>PROJECT</strong> <br>
             </h1>
             <p class="title-description">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
@@ -84,10 +84,10 @@
       <div class="l_wrapper">
         <header class="section-header">
 
-          <div class="title">
+          <div class="title theme_white">
             <h1 class="title-headings">
               CALENDAR AND <br>
-              EVENT TOOLS
+              <strong>EVENT TOOLS</strong>
             </h1>
             <p class="title-description">Description</p>
             <div class="title-controls">Control</div>
