--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
               CALENDAR AND <br>
               <strong>EVENT TOOLS</strong>
             </h1>
-            <p class="title-description">Description</p>
-            <div class="title-controls">Control</div>
+            <div class="title-controls">
+              <button class="button" type="button">+ ADD TO CALENDAR</button>
+            </div>
           </div>
           
         </header>
